--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
-Example/ZCRMiOS.xcworkspace/xcuserdata/boopathy-1361.xcuserdatad/UserInterfaceState.xcuserstate
+Example/ZCRMiOS.:qe/xcuserdata/boopathy-1361.xcuserdatad/UserInterfaceState.xcuserstate
+.DS_Store
+Example/Pods/Pods.xcodeproj/project.pbxproj
+Example/Pods/Pods.xcodeproj/project.xcworkspace/
+Example/Pods/Pods.xcodeproj/xcuserdata/sarath-zuch594.xcuserdatad/
+Example/build/
