--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Example/ZCRMiOS.:qe/xcuserdata/boopathy-1361.xcuserdatad/UserInterfaceState.xcus
 .DS_Store
 Example/Pods/Pods.xcodeproj/xcuserdata/sarath-zuch594.xcuserdatad/
 Example/build/
+Example/Pods/Pods.xcodeproj/project.xcworkspace/xcuserdata/sarath-zuch594.xcuserdatad/UserInterfaceState.xcuserstate
