changes in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-Example/ZCRMiOS.:qe/xcuserdata/boopathy-1361.xcuserdatad/UserInterfaceState.xcuserstate
+Example/ZCRMiOS.xcworkspace/xcuserdata/boopathy-1361.xcuserdatad/UserInterfaceState.xcuserstate
 .DS_Store
 Example/Pods/Pods.xcodeproj/xcuserdata/sarath-zuch594.xcuserdatad/
 Example/build/
