isUserSignedIn method changed apt to new flow

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 Example/ZCRMiOS.xcworkspace/xcuserdata/boopathy-1361.xcuserdatad/UserInterfaceState.xcuserstate
 .DS_Store
 Example/Pods/Pods.xcodeproj/xcuserdata/sarath-zuch594.xcuserdatad/
+Example/ZCRMiOS.xcodeproj/xcuserdata/
+Example/ZCRMiOS.xcworkspace/xcshareddata/
