Add logger class

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,26 @@
 Example/ZCRMiOS.xcworkspace/xcuserdata/boopathy-1361.xcuserdatad/UserInterfaceState.xcuserstate
 .DS_Store
-Example/Pods/Pods.xcodeproj/xcuserdata/sarath-zuch594.xcuserdatad/
+Example/ZCRMiOS.xcworkspace/xcshareddata/
+
+## User settings
+xcuserdata/
+
+## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
+*.xcscmblueprint
+*.xccheckout
+
+## compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
+build/
+DerivedData/
+*.moved-aside
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+
+## Gcc Patch
+/*.gcno
