--- a/Example/Podfile
+++ b/Example/Podfile
@@ -2,8 +2,27 @@ use_frameworks!
 
 pod 'ZohoAuth', '1.3'
 pod 'ZohoPortalAuth', '0.0.3'
+pod 'ZCacheiOS', :git => 'https://git.csez.zohocorpin.com/zoho-crm/ios_cache_framework.git', :branch => 'USER_RAJA'
 
 target 'ZCRMiOS_Tests' do
   pod 'ZCRMiOS', :path => '../'
 
+  deployment_target = '12.0'
+
+  post_install do |installer|
+      installer.generated_projects.each do |project|
+          project.targets.each do |target|
+              target.build_configurations.each do |config|
+                  config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = deployment_target
+              end
+          end
+          project.build_configurations.each do |bc|
+              bc.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = deployment_target
+          end
+      end
+      installer.pods_project.build_configurations.each do |config|
+        config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
+      end
+  end
+  
 end
