CORE: Changed acc. to lookup_relation branch in cache sdk.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Example/ZCRMiOS.xcworkspace/xcuserdata/boopathy-1361.xcuserdatad/UserInterfaceSt
 Example/Pods/Pods.xcodeproj/xcuserdata/sarath-zuch594.xcuserdatad/
 Example/ZCRMiOS.xcodeproj/xcuserdata/
 Example/ZCRMiOS.xcworkspace/xcshareddata/
+Example/Pods/Pods.xcodeproj/project.pbxproj
+Example/ZCRMiOS.xcworkspace/xcuserdata/
